--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -34,4 +34,60 @@ body {
 
 .menu-lateral {
     display: flex;
+    flex-direction: column;
+    background-color: #15191C;
+    width: 75vw;
+    height: 100vw;
+}
+
+.menu-lateral__logo {
+    width: 110px;
+    align-self: center;
+    padding: 16px;
+}
+
+.menu-lateral__link {
+    height: 64px;
+    color: #95999C;
+    padding-left: 64px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-lateral__link--ativo {
+    color: white;
+    padding-left: 56px;
+    border-left: 8px solid white;
+}
+
+.menu-lateral__link::before {
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    position: absolute;
+    left: 24px;
+}
+
+.menu-lateral__link--inicio {
+    content: "\e902";
+}
+
+.menu-lateral__link--videos {
+    content: "\e90e";
+}
+
+.menu-lateral__link--picos {
+    content: "\e909";
+}
+
+.menu-lateral__link--integrantes {
+    content: "\903";
+}
+
+.menu-lateral__link--camisas {
+    content: "\900";
+}
+
+.menu-lateral__link--pinturas {
+    content: "\e90a";
 }
