--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -6,12 +6,12 @@
 body {
     background-color: #1D232A;
     font-family: 'Open Sans', 'icones', sans-serif;
-    color: white;
+    color: #FFFFFF;
 }
 
 .cabecalho {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     background-color: #15191C;
     padding: 8px 16px;
@@ -20,12 +20,12 @@ body {
 
 .cabecalho__menu i::before {
     content: "\e904";
-    font-size: 30px;
+    font-size: 24px;
 }
 
 .cabecalho__notificacao i::before {
     content: "\e906";
-    font-size: 30px;
+    font-size: 24px;
 }
 
 .cabecalho__logo {
@@ -33,24 +33,24 @@ body {
 }
 
 .menu-lateral {
-    position: absolute;
-    left: -100vw;
     display: flex;
     flex-direction: column;
+    background-color: #15191C;
     width: 75vw;
     height: 100vh;
-    background-color: #15191C;
-    transition: left .25s;
-    z-index: 99;
+
+    position: absolute;
+    left: -100vw;
+    transition: .25s;
 }
 
 .menu-lateral--ativo {
     left: 0;
-    transition: left .25s;
+    transition: .25s;
 }
 
 .menu-lateral__logo {
-    width: 110px;
+    width: 118px;
     align-self: center;
     padding: 16px;
 }
@@ -64,12 +64,13 @@ body {
 }
 
 .menu-lateral__link--ativo {
-    color: white;
+    color: #FFFFFF;
     padding-left: 56px;
-    border-left: 8px solid white;
+    border-left: 8px solid #FFFFFF;
 }
 
 .menu-lateral__link::before {
+    content: "\e900";
     width: 24px;
     height: 24px;
     font-size: 24px;
@@ -90,13 +91,92 @@ body {
 }
 
 .menu-lateral__link--integrantes::before {
-    content: "\903";
+    content: "\e903";
 }
 
 .menu-lateral__link--camisas::before {
-    content: "\900";
+    content: "\e900";
 }
 
 .menu-lateral__link--pinturas::before {
     content: "\e90a";
+}
+
+.principal {
+    padding: 24px 16px;
+}
+
+.titulo-pagina {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.cartao {
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    background-color: #2C343A;
+}
+
+.cartao__conteudo {
+    padding: 16px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.cartao__destaque {
+    grid-column: span 2;
+}
+
+.cartao__titulo {
+    font-size: 1.2rem;
+    font-weight: 700;
+    grid-column: span 2;
+}
+
+.cartao__perfil {
+    color: #95999C;
+    font-size: 0.9rem;
+    grid-column: span 2;
+}
+
+.cartao__info {
+    display: flex;
+    align-items: center;
+    color: #95999C;
+}
+
+.cartao__info--tempo::before {
+    content: "\e90c";
+    margin-right: 8px;    
+}
+
+.cartao__info--visualizacao::before {
+    content: "\e90f";
+    margin-right: 8px;    
+}
+
+.cartao__botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0480DC;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
+
+.cartao__botao--play::before {
+    content: "\e90b";
+    font-size: 24px;
+}
+
+.cartao__botao--destaque {
+    width: 100%;
+    grid-column: span 2;
+}
+
+.cartao__botao--destaque::before {
+    margin-right: 8px;
 }
