--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -121,7 +121,9 @@ body {
 .cartao__conteudo {
     padding: 16px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+    row-gap: 8px;
+    column-gap: 8px;
 }
 
 .cartao__destaque {
