--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -271,6 +271,37 @@ body {
     margin-right: 8px;
 }
 
+.cartao--recentes{
+    display: none;
+}
+
+@media  screen and (min-width: 1440px) {
+    .cartao--recentes{
+        display: grid;
+        grid-template-columns: auto auto;
+        align-items: center;
+        row-gap: 24px;
+        width: 256px;
+        padding: 16px;
+        box-sizing: border-box;
+    }
+    
+    .cartao--recentes .cartao__titulo{
+        grid-column: auto;
+    }
+
+    .cartao__link{
+        font-size: 0.8rem;
+        font-weight: 600;
+        color: #0480DC;
+        justify-self: flex-end;
+    }
+
+    .cartao__lista{
+        display: grid;
+    }
+}
+
 .secao {
     display: grid;
     gap: 16px;
